Update header help link to Travis CI documetation page

--- a/assets/scripts/app/templates/layouts/top.hbs
+++ b/assets/scripts/app/templates/layouts/top.hbs
@@ -14,7 +14,7 @@
   </li>
   <li class="menu community">
     <p class="handle">
-      <a href="#">Help</a>
+      <a href="http://about.travis-ci.org/doc/">Help</a>
     </p>
     <ul>
       <li><a href="http://about.travis-ci.org/docs">{{t layouts.top.docs}}</a></li>
